@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2009, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2009-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -67,7 +67,7 @@ void ImageViewportPostProcess::postRender( const std::string &panelName, MImage 
 	}
 	else
 	{
-		ToMayaImageConverterPtr toMaya = ToMayaImageConverter::create( image );
+		ToMayaImageConverterPtr toMaya = new ToMayaImageConverter( image );
 		toMaya->convert( viewportImage );
 	}
 }
