@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2009-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2009-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -57,10 +57,10 @@ using std::vector;
 
 IE_CORE_DEFINERUNTIMETYPED( ToMayaImageConverter );
 
-ToMayaImageConverter::ToMayaImageConverter( ConstObjectPtr object )
+ToMayaImageConverter::ToMayaImageConverter( ConstImagePrimitivePtr image )
 	:	ToMayaConverter( "Converts image types.", IECore::ImagePrimitiveTypeId )
 {
-	srcParameter()->setValue( constPointerCast<Object>( object ) );
+	srcParameter()->setValue( constPointerCast<ImagePrimitive>( image ) );
 
 	IntParameter::PresetsContainer typePresets;
 	typePresets.push_back( IntParameter::Preset( "Float", Float ) );
@@ -72,11 +72,6 @@ ToMayaImageConverter::ToMayaImageConverter( ConstObjectPtr object )
 		typePresets );
 
 	parameters()->addParameter( m_typeParameter );
-}
-
-ToMayaImageConverterPtr ToMayaImageConverter::create( const IECore::ObjectPtr src )
-{
-	return new ToMayaImageConverter( src );
 }
 
 IntParameterPtr ToMayaImageConverter::typeParameter()
